--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -198,6 +198,7 @@ body.project-show div#main > div.center > div.widget {
     max-width: 580px;
     margin-right: 20px;
     clear: left;
+	padding-bottom: 20px;
 }
 
 body.project-show div#main > div.side > div.widget .title {
