--- a/view/css/common.css
+++ b/view/css/common.css
@@ -323,8 +323,13 @@ ul.navi li.next.active a {
 /* = caja de comentarios
 *************************/
 div.widget.blog-comment{position:relative;}
-div.widget.blog-comment button.green{float:right}
-div.widget.blog-comment div#bocadillo{background:url('/view/css/bocadillo.jpg') no-repeat;position:absolute;width:56px;	height:51px;}
+div.widget.blog-comment button.green{float:right;
+	margin-top: 25px;
+	margin-bottom: 5px;
+}
+div.widget.blog-comment div#bocadillo{background:url('/view/css/bocadillo.jpg') no-repeat;position:absolute;width: 50px;	height: 50px;
+	margin-top: 8px;
+}
 
 /* = enlace para volver arriba
 *******************************/
