--- a/view/css/glossary.css
+++ b/view/css/glossary.css
@@ -4,12 +4,11 @@
 	float:left;
 }
 #glossary-content h3.title {
-	margin: 0px;
-	padding: 13px 0 10px 30px;
+	margin: 0px 0px 20px;
+	padding: 15px 0 10px 30px;
 	background: white url('arrowH2-section.gif') no-repeat scroll -5px -2px;
-	height:37px;
-	font-size: 20px;
-    font-weight: normal;
+	font-size: 16px;
+    font-weight: bold;
 }
 #glossary-content div.glossary-page {
     background-color: white;
@@ -18,10 +17,11 @@
     padding: 10px 0px 1px;
 }
 #glossary-content h4.supertitle {
-	font-size: 20px;
-    font-weight: normal;
+	font-size: 16px;
 	margin: 0px 30px;
     border-bottom: 1px solid black;
+	font-weight: bold;
+	padding-bottom: 5px;
 }
 #glossary-content h5.aqua {
     font-size: 14px;
@@ -30,10 +30,11 @@
     text-transform: none !important;
 }
 #glossary-content .post {
-	margin: 0px 30px 30px;
+	margin: 0 30px 0;
+	line-height: 16px;
 }
 #glossary-content .post p{
-	margin-top: 20px;
+	margin-top: 10px;
 }
 #glossary-content .post .embed{
     width: 500px;
@@ -75,9 +76,9 @@ div.widget.glossary-content-module ol li a.up:hover{
 }
 div.widget.glossary-sidebar-module .supertitle {
     border-bottom: 1px solid #58595b;
-    font: bold 16px Helvetica, Arial, Geneva, sans-serif;
+    font: bold 14px Helvetica, Arial, Geneva, sans-serif;
     margin: 0 0 3px;
-    padding: 6px;
+    padding: 5px;
 }
 div.widget.glossary-sidebar-module .supertitle.active {
     background-color: #f3f3f3;
@@ -85,6 +86,7 @@ div.widget.glossary-sidebar-module .supertitle.active {
 div.widget.glossary-sidebar-module ul {
 	padding-left:0px;
     list-style: none;
+	margin-bottom: 20px;
 }
 div.widget.glossary-sidebar-module ul li {
     margin:0 0 5px 0;
