--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -46,7 +46,7 @@ div#main {
  
 div.widget {
     background-color: white;
-    padding: 15px 20px 10px;
+    padding: 15px 20px;
     overflow: hidden;    
 }
 
