--- a/view/css/user/profile.css
+++ b/view/css/user/profile.css
@@ -26,9 +26,8 @@ div.widget.user-supporters h3.supertitle {
     border-bottom: 1px solid #313B96 !important;
 }
 
-div.widget.user-mates div.users h3.supertitle{border-top: 1px solid #808285;border-bottom:1px dashed #818284;padding:5px 0 5px 5px;color:#20B3B2;font-size:12px;background:none;}
+div.widget.user-mates div.users h3.supertitle{border-top: 1px solid #808285;border-bottom: 1px solid #20B3B2;padding:5px 0 5px 5px;color:#20B3B2;font-size:12px;background:none;}
 
-div.widget.user-mates div.users h3.supertitle:hover{background:#E8E9E9;}
 
 body.user-profile div#main div.discover-group div.widget.project {
     margin: 0px 0px 0px 15px;
