--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -1,3 +1,4 @@
+@import url('widget/wof.css');
 @import url('widget/summary.css');
 @import url('widget/media.css');
 @import url('widget/share.css');
